// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Access/> should render properly 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Access management
      </h1>
    </div>
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="contentWrapper"
      >
        <form
          class=""
        >
          <h4
            class="mb-2"
          >
            <i
              class="material-icons mr-1"
            >
              mail
            </i>
            Joining the helpdesk
          </h4>
          <p>
            If you allow people to join automatically, anyone with an approved email address can use this link to confirm their email and sign up:
             
            <a
              href="https://acme.gorgias.com/signup"
            >
              https://acme.gorgias.com/signup
            </a>
          </p>
          <fieldset
            class="form-group"
          >
            <div
              class="formGroup form-check"
            >
              <input
                checked=""
                class="form-check-input"
                type="radio"
              />
              <label
                class="control-label ml-2 form-check-label"
              >
                Invite people manually
              </label>
            </div>
            <div
              class="formGroup form-check"
            >
              <input
                class="form-check-input"
                type="radio"
              />
              <label
                class="control-label ml-2 form-check-label"
              >
                Let people sign up automatically, and only accept email addresses from specific domains
              </label>
            </div>
          </fieldset>
          <button
            class="btn btn-primary"
            type="submit"
          >
            Save changes
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Access/> should render with the previously saved settings 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Access management
      </h1>
    </div>
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="contentWrapper"
      >
        <form
          class=""
        >
          <h4
            class="mb-2"
          >
            <i
              class="material-icons mr-1"
            >
              mail
            </i>
            Joining the helpdesk
          </h4>
          <p>
            If you allow people to join automatically, anyone with an approved email address can use this link to confirm their email and sign up:
             
            <a
              href="https://acme.gorgias.com/signup"
            >
              https://acme.gorgias.com/signup
            </a>
          </p>
          <fieldset
            class="form-group"
          >
            <div
              class="formGroup form-check"
            >
              <input
                class="form-check-input"
                type="radio"
              />
              <label
                class="control-label ml-2 form-check-label"
              >
                Invite people manually
              </label>
            </div>
            <div
              class="formGroup form-check"
            >
              <input
                checked=""
                class="form-check-input"
                type="radio"
              />
              <label
                class="control-label ml-2 form-check-label"
              >
                Let people sign up automatically, and only accept email addresses from specific domains
              </label>
            </div>
          </fieldset>
          <div
            class="InputField form-group"
            color=""
          >
            <div
              class=""
            >
              <textarea
                class="form-control"
                id="id-input-1"
              >
                gorgias.com
gorgias.io
              </textarea>
              
            </div>
            <small
              class="form-text text-muted"
            >
              Ex: domain.com, *.domain.com. Wildcards allowed. Use separate lines for multiple entries.
            </small>
          </div>
          <button
            class="btn btn-primary"
            type="submit"
          >
            Save changes
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Access/> should show an error and block submit when using a generic domain 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Access management
      </h1>
    </div>
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="contentWrapper"
      >
        <form
          class=""
        >
          <h4
            class="mb-2"
          >
            <i
              class="material-icons mr-1"
            >
              mail
            </i>
            Joining the helpdesk
          </h4>
          <p>
            If you allow people to join automatically, anyone with an approved email address can use this link to confirm their email and sign up:
             
            <a
              href="https://acme.gorgias.com/signup"
            >
              https://acme.gorgias.com/signup
            </a>
          </p>
          <fieldset
            class="form-group"
          >
            <div
              class="formGroup form-check"
            >
              <input
                class="form-check-input"
                type="radio"
              />
              <label
                class="control-label ml-2 form-check-label"
              >
                Invite people manually
              </label>
            </div>
            <div
              class="formGroup form-check"
            >
              <input
                checked=""
                class="form-check-input"
                type="radio"
              />
              <label
                class="control-label ml-2 form-check-label"
              >
                Let people sign up automatically, and only accept email addresses from specific domains
              </label>
            </div>
          </fieldset>
          <div
            class="InputField form-group"
            color="danger"
          >
            <div
              class=""
            >
              <textarea
                class="form-control-danger is-invalid form-control"
                id="id-input-2"
              >
                gmail.com
              </textarea>
              <div
                class="invalid-feedback"
              >
                Generic domain: gmail.com
              </div>
            </div>
            <small
              class="form-text text-muted"
            >
              Ex: domain.com, *.domain.com. Wildcards allowed. Use separate lines for multiple entries.
            </small>
          </div>
          <button
            class="btn btn-primary disabled"
            disabled=""
            type="submit"
          >
            Save changes
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;
